--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,8 @@
     "activityBar.inactiveForeground": "#e7e7e799",
     "activityBarBadge.background": "#38763f",
     "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#638f2c",
+    "commandCenter.border": "#e7e7e7f1",
+    "sash.hoverBorder": "#4dd15f",
     "statusBar.background": "#547949",
     "statusBar.foreground": "#e7e7e7",
     "statusBarItem.hoverBackground": "#4dd15f",
@@ -20,5 +20,5 @@
     "titleBar.inactiveBackground": "#30bb3299",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#BB4130"
+  "peacock.color": "#276e42"
 }
